Add : 연락처 추가 다이얼로그 기능
1) 유효성 검사
- EditText와 String에 확장함수를 사용
- 조건 : 비어 있을 때, 010으로 시작하지 않을 때, 이메일 형식에 맞지 않을 때
- 메모와 부서는 유효성 검사가 필요하지 않아 제외
2) 저장 버튼 활성화 조절
- 조건에 맞지 않으면(에러가 존재하면) 저장 버튼 비활성화
- 인터페이스를 만들어 저장 버튼이 눌렸을 때 메인 액티비티에서 리사이클러뷰 업데이트 가능하도록 함
3) 사용하는 문자열 strings.xml에 저장
- 에러 메세지와 부서 이름들을 strings.xml에 저장
4) 부서 선택을 위해 스피너 추가
- 기본 스피너로 진행(커스텀 예정)
- 5개 부서를 넣어둠
- 만들어놓은 부서 리스트 사용
5) 전화번호 자동 하이픈 설정
- inputType을 phone으로,
- addTextChangedListener(PhoneNumberFormattingTextWatcher())를 EditText 객체에 추가
- 시스템 언어를 한국어로 변경(이렇게 하지 않으면 기존에 설정되어있던 미국의 번호 형식을 따라감)

--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -21,8 +21,8 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/blue"
-        android:inputType="text"
         android:hint="이름"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_add_contact_default_image" />
@@ -33,10 +33,10 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="16dp"
-        android:inputType="phone"
-        android:maxLength="13"
         android:backgroundTint="@color/blue"
         android:hint="전화번호"
+        android:inputType="phone"
+        android:maxLength="13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_add_contact_name" />
@@ -68,8 +68,8 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/blue"
-        android:inputType="textEmailAddress"
         android:hint="이메일"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_add_contact_department" />
@@ -81,8 +81,8 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/blue"
-        android:inputType="text"
         android:hint="메모"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_add_contact_email" />
@@ -106,7 +106,8 @@
         android:id="@+id/btn_add_contact_add"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:background="@drawable/shape_my_page_background"
+        android:background="@drawable/selector_add_contact_add_btn"
+        android:enabled="false"
         android:text="저장"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/btn_add_contact_cancel"
