--- a/app/src/main/res/layout/contact_list_person.xml
+++ b/app/src/main/res/layout/contact_list_person.xml
@@ -35,16 +35,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="3dp"
         android:text="어제 빌려간 돈 안주는 사람"
+        android:textColor="#8A8A8A"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/iv_contactlist_profile"
         app:layout_constraintTop_toBottomOf="@+id/tv_contactlist_name" />
 
     <ImageView
         android:id="@+id/iv_contactlist_favorite"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_main_empty_favorite"
         app:layout_constraintBottom_toBottomOf="parent"
