--- a/app/src/main/res/layout/contact_list_title.xml
+++ b/app/src/main/res/layout/contact_list_title.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:background="@color/blue">
+    android:background="@drawable/shape_my_page_gradient_background">
 
     <TextView
         android:id="@+id/tv_listtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="인사부(2)"
+        android:text="인사부"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
