--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -132,7 +132,7 @@
                 android:id="@+id/tv_detail_name_tab"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
@@ -161,17 +161,18 @@
                 android:id="@+id/iv_profile"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:src="@drawable/img_default_profile"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_favorite"
-                android:layout_width="60dp"
+                android:layout_width="100dp"
                 android:layout_height="60dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/edge"
+                android:background="@drawable/btn_edge"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
 
@@ -187,11 +188,11 @@
 
             <TextView
                 android:id="@+id/tv_message"
-                android:layout_width="140dp"
+                android:layout_width="100dp"
                 android:layout_height="60dp"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/edge"
+                android:background="@drawable/btn_edge"
+                app:layout_constraintEnd_toStartOf="@+id/tv_call"
                 app:layout_constraintStart_toEndOf="@+id/tv_favorite"
                 app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
 
@@ -199,59 +200,30 @@
                 android:id="@+id/iv_message"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="12dp"
                 android:src="@drawable/ic_message"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_message"
-                app:layout_constraintEnd_toStartOf="@+id/tv_toMessage"
+                app:layout_constraintEnd_toEndOf="@+id/tv_message"
                 app:layout_constraintStart_toStartOf="@+id/tv_message"
                 app:layout_constraintTop_toTopOf="@+id/tv_message" />
 
             <TextView
-                android:id="@+id/tv_toMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="메시지"
-                android:textColor="@color/white"
-                android:textSize="20dp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_message"
-                app:layout_constraintEnd_toEndOf="@+id/tv_message"
-                app:layout_constraintTop_toTopOf="@+id/tv_message" />
-
-            <TextView
                 android:id="@+id/tv_call"
-                android:layout_width="140dp"
+                android:layout_width="100dp"
                 android:layout_height="60dp"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/edge"
+                android:layout_marginEnd="25dp"
+                android:background="@drawable/btn_edge"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.157"
-                app:layout_constraintStart_toEndOf="@+id/tv_message"
                 app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
 
             <ImageView
                 android:id="@+id/iv_call"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="12dp"
                 android:src="@drawable/ic_call"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_call"
-                app:layout_constraintEnd_toStartOf="@+id/tv_toCall"
-                app:layout_constraintStart_toStartOf="@+id/tv_call"
-                app:layout_constraintTop_toTopOf="@+id/tv_call" />
-
-            <TextView
-                android:id="@+id/tv_toCall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:text="전화"
-                android:textColor="@color/white"
-                android:textSize="20dp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_call"
                 app:layout_constraintEnd_toEndOf="@+id/tv_call"
+                app:layout_constraintStart_toStartOf="@+id/tv_call"
                 app:layout_constraintTop_toTopOf="@+id/tv_call" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
