--- a/app/src/main/res/layout/contact_list_person.xml
+++ b/app/src/main/res/layout/contact_list_person.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="80dp"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/iv_contactlist_profile"
