--- a/app/src/main/res/layout/contact_list_title.xml
+++ b/app/src/main/res/layout/contact_list_title.xml
@@ -26,9 +26,9 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="@string/department_count"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toTopOf="@+id/tv_listtitle"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_listtitle"
         app:layout_constraintStart_toEndOf="@+id/tv_listtitle"
         />
 
