--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -104,6 +104,7 @@
         android:layout_width="290dp"
         android:layout_height="30dp"
         android:layout_marginTop="4dp"
+        android:padding="1dp"
         android:background="@drawable/shape_add_contact_alarm_layout_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +128,7 @@
                 android:layout_height="match_parent"
                 android:textColor="@color/white"
                 android:gravity="center"
-                android:text="OFF" />
+                android:text="@string/alarm_time_off" />
         </LinearLayout>
 
         <LinearLayout
@@ -146,7 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="5초 뒤" />
+                android:text="@string/alarm_time_five_seconds" />
         </LinearLayout>
 
         <LinearLayout
@@ -165,7 +166,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="5분 뒤" />
+                android:text="@string/alarm_time_five_minutes" />
         </LinearLayout>
 
         <LinearLayout
@@ -184,7 +185,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="10분 뒤" />
+                android:text="@string/alarm_time_ten_minutes" />
         </LinearLayout>
 
         <LinearLayout
@@ -203,7 +204,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="30분 뒤" />
+                android:text="@string/alarm_time_thirty_minutes" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
