Add : 전화번호 입력시 하이픈 자동추가 및 전화번호 입력 수 제한 구현

--- a/app/src/main/res/layout/dialog_edit_my_profile.xml
+++ b/app/src/main/res/layout/dialog_edit_my_profile.xml
@@ -46,7 +46,8 @@
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTv_name" />
+        app:layout_constraintTop_toBottomOf="@id/editTv_name"
+        android:maxLength="13"/>
 
     <EditText
         android:id="@+id/editTv_email"
