Add : 마이 페이지 데이터를 기본적으로 내 정보 수정 다이얼로그에 보내기 & 사진 선택 기능
1) 데이터를 보낼 때 인터페이스를 활용
- adapter.getInfo()
- fragment.giveData()

2) photo picker 사용
- activity-ktx 라이브러리 추가
- PickVisualMedia 클래스 활용
- registerForActivityResult 활용
- Uri로 세팅하고 마이 페이지 보내줄 때는 Drawable로 보내줌
- scaleType은 직접 코드에서 지정

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -26,7 +26,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_my_page_category_name"
+                android:id="@+id/tv_my_page_name_tab"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:background="@drawable/shape_my_page_gradient_background"
@@ -47,7 +47,7 @@
                 android:paddingHorizontal="15dp"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/tv_my_page_category_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_my_page_name_tab"
                 tools:text="민지" />
 
             <TextView
