Add : 마이 페이지와 내 정보 수정 다이얼로그 연결 기능 완료
1) 프로필 이미지를 기본 이미지로 변경

2) 이미지와 데이터는 기본적으로 양방향으로 전달됨
- 인터페이스와 어댑터 함수를 통해서
- 이미지는 Drawable 타입으로 이동함

--- a/app/src/main/res/layout/dialog_edit_my_profile.xml
+++ b/app/src/main/res/layout/dialog_edit_my_profile.xml
@@ -15,7 +15,8 @@
         android:layout_height="150dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_contactlist_circle"
-        android:src="@drawable/person_8"
+        android:src="@drawable/img_default_profile"
+        android:clipToOutline="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
